name:                morse
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
executable morse
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , containers
                     , morse
                     , QuickCheck

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
