name:                url-shortener
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable url-shortener
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
